--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^18.2.0",
+    "framer-motion": "^11.2.10",
     "react": "^18.2.0",
-    "framer-motion": "^11.2.10"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
